--- a/desafios/ex024/estilo/style.css
+++ b/desafios/ex024/estilo/style.css
@@ -19,6 +19,11 @@ html, body {
     min-height: 100vh;
     background-color: darkgray;
     font-family: var(--fonte1);
+
+   max-width: 1000px;
+   margin: auto;
+
+   
 }
 
 header {
@@ -54,7 +59,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
+    font-size: 3.0vw;
+}
+
+section p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -65,12 +74,32 @@ section.normal {
 section.imagem {
     background-color: rgb(73, 73, 73);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.489);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.418);
+    text-shadow: 1px 1px 0px rgb(0, 0, 0);
+    
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+   
+
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    
+    
 }
 
 footer {
