--- a/desafios/ex024/estilo2/estilo2.css
+++ b/desafios/ex024/estilo2/estilo2.css
@@ -1,5 +1,20 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+
+    
+
+
+    /*Fontes*/
+    --fonte-padrao: verdana, Geneva, Tahoma, sans-serif;
+    --fonte-texto: 'Sriracha', cursive; 
+    --fonte-titulo:'Passion One', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -9,6 +24,7 @@ body {
     min-height: 100vh;
     background-color: darkgray;
     border: 1px solid red;
+    font-family: var(--fonte-padrao);
 }
 
 
@@ -22,6 +38,8 @@ header {
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte-titulo);
+    font-size: 10vw;
 }
 
 header p {
@@ -39,11 +57,14 @@ a:hover {
 }
 
 section {
+    
     padding-top: 10vh;
     padding-bottom: 10vh;
     border: 1px solid red;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte-texto);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -58,7 +79,8 @@ section.imagem {
 
 section.imagem p {
     background-color: black;
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 
